feat: vitest 관련 설정 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,9 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    // vitest 관련 패키지 global로 사용하도록 (ex) it, expect)
+    "types": ["vitest/globals"]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
