feat: CI, lint-staged에 tsc 검사 추가

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,9 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
+      - name: type check
+        run: yarn tsc --noEmit
+
       - name: Run lint
         run: yarn lint
 
