--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.29.2",
+    "msw": "^2.2.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -43,7 +44,12 @@
     "prettier": "^3.2.5",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
-    "vitest": "^1.5.0"
+    "vitest": "^1.5.1"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
+  }
 }
